src/tests/invalidframingconfig/data/frameancestorsnoxfoallowfrom.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
CSP frame-ancestors is set but X-Frame-Options Allow-From is not.